# managment_backend

./: .gitmodules  Cargo.toml  questions.json  skill_coefficients.json  tauri.conf.json
icons/: icon.icns
management_core/: Cargo.toml
management_core/src/: lib.rs  models.rs
src/: main.rs
