[package]
name = "management_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { verison = "1.3.3", features = ["v4"] }
serde_json = "1.0.95"
#sqlite = "0.30.4"
serde = { version="1.0.163", features=["derive"] }